                       ***********************************
                       ** bridgesampling VERSION 0.4-x **
                       ***********************************
                    
                    Changes in bridgesampling Version 0.4-x
                    Released XXX 2017

  Significant User Visible Changes and New Features

  o 
  
  Bugfixes
  
  o Retroactively updated the NEWS file.
  
  
                       ***********************************
                       ** bridgesampling VERSION 0.3-x **
                       ***********************************
                    
                    Changes in bridgesampling Version 0.3-x
                    Released October 2017

  Significant User Visible Changes and New Features

  o Added a variety of new methods for bridge_sampler() that automatically 
    extract the posterior samples, but also require a log_posterior function. 
    Specifically, bridge_sampler() now has methods of this kind for the 
    following objects: matrix, mcmc.list, rjags, and runjags.
    
  o Added stanreg method to bridge_sampler() which allows to pass objects from 
    rstanarm. Note that this method requires to specify the diagnostic_file 
    option, see examples. Thanks to Ben Goodrich for the pull request.
    
  o Added new vignette introducing the package: bridgesampling: An R Package 
    for Estimating Normalizing Constants 
    
  o Added two new data sets plus code used in the new vignette, see ?ier and 
    ?turtles
    
  o Added bayes_factor() as alias for bf(), as bf() is an existing function in 
    package brms. 
    
  o Added use_neff argument to bridge_sampler() which allows to determine 
    whether the effective sample size or the actual sample size is used for
    bridge sampling.
  
  Bugfixes

  o bridge_sampler() for stan objects on windows should not fail anymore if 
    cores > 1. Instead, cores will be set to 1 (with warnings).

