@@ -182,12 +182,21 @@ bridge_sampler.mcmc.list <- function(samples = NULL, log_posterior = NULL, ..., 
                                      packages = NULL, varlist = NULL, envir = .GlobalEnv,
                                      rcppFile = NULL, maxiter = 1000, silent = FALSE,
                                      verbose = FALSE) {
-
   # split samples in two parts
   nr <- nrow(samples[[1]])
   samples4fit_index <- seq_len(nr) %in% seq_len(round(nr/2))
   samples_4_fit_tmp <- samples[samples4fit_index,,drop=FALSE]
   samples_4_fit_tmp <- do.call("rbind", samples_4_fit_tmp)
+
+  # check lb and ub
+  if (!is.numeric(lb))
+    stop("lb needs to be numeric", call. = FALSE)
+  if (!is.numeric(ub))
+    stop("ub needs to be numeric", call. = FALSE)
+  if (!all(colnames(samples_4_fit_tmp) %in% names(lb)))
+    stop("lb does not contain all parameters.", call. = FALSE)
+  if (!all(colnames(samples_4_fit_tmp) %in% names(ub)))
+    stop("ub does not contain all parameters.", call. = FALSE)
 
   # transform parameters to real line
   tmp <- .transform2Real(samples_4_fit_tmp, lb, ub)
